# GlobalBot

./: .gitignore  README.md  conftest.py  pyproject.toml  rag_example.py
globalbot/api/: store.py
globalbot/api/routes/: chat.py  documents.py  knowledge.py  pipeline.py
globalbot/backend/: requirements.txt  serve.py
globalbot/backend/base/: __init__.py  component.py  schema.py
globalbot/backend/chunkings/: __init__.py  base.py  fixed.py  llm_chunker.py  semantic.py
globalbot/backend/embeddings/: __init__.py  base.py  fastEmbed.py  hf.py  langchain_based.py  ollama.py  ollama_impl.py  openai.py
globalbot/backend/insert_data/: ingest.py
globalbot/backend/llms/: __init__.py  factory.py
globalbot/backend/llms/chats/: __init__.py  base.py  hf.py  langchain_based.py  ollama.py  ollama_impl.py  onnx.py  openai.py  openai_impl.py  vllm.py
globalbot/backend/llms/completions/: __init__.py  base.py  openai.py  vllm.py
globalbot/backend/llms/prompts/: __init__.py  base.py
globalbot/backend/loaders/: __init__.py  chat_pipeline.py  ingestion_pipeline.py  mineru_loader.py
globalbot/backend/model/ade/: __init__.py  agent.py  output.py  pipeline.py
globalbot/backend/model/layout/: __init__.py  base.py  pp_doc_layout.py
globalbot/backend/model/ocr/: __init__.py  base.py  lighton_ocr.py
globalbot/backend/model/reading_order/: __init__.py  layout_reader.py
globalbot/backend/model/utils/: __init__.py  enum_class.py  models_dowload_util.py  text_extraction.py
globalbot/backend/rag/: chunker.py  core.py
globalbot/backend/rerankers/: __init__.py  base.py  rerankers.py
globalbot/backend/storages/: __init__.py  ingestion.py  keyword_search.py  retrieval.py
globalbot/backend/test/: test_chunkings.py  test_embedding_models.py  test_llm_chats.py  test_llm_completions.py  test_loaders.py  test_rerankers.py  test_storages.py
globalbot/backend/tests/: curl_samples.sh  simple_test.py  test_api.py  test_units.py
globalbot/backend/utils/: __init__.py  hashing.py  logging.py
globalbot/frontend/: index.html
(+9 files in other folders)
