[project]
name = "globalbot"
version = "0.1.0"
description = ""
authors = [
    {name = "nguyennhatnguyenduong12@gmail.com, zplus1209"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12,<4.0.0"
dependencies = [
    "pytest (>=9.0.2,<10.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "langchain-core (>=1.2.20,<2.0.0)",
    "langchain (>=1.2.13,<2.0.0)",
    "openai (>=2.29.0,<3.0.0)",
    "numpy (>=2.4.3,<3.0.0)",
    "ollama (>=0.6.1,<0.7.0)"
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["globalbot/backend/test"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
